--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
 <html>
     <head>
-        <title>HTML Blog</title>
+        <title>Testing HTML</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
